--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,16 @@
+---
+import Home from "../Home";
+import "../global.css";
+---
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Woods CS</title>
-  </head>
-  <body class="bg-neutral-950 font-mono font-light">
-    <div id="root" class="h-full w-full"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+<body class="bg-neutral-950 font-mono font-light">
+    <Home />
+</body>
 </html>
