--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,6 @@ import "../global.css";
     <title>Woods CS</title>
 </head>
 <body class="bg-neutral-950 font-mono font-light">
-    <Home />
+    <Home client:load />
 </body>
 </html>
