--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Home from "../Home";
+import HomePage from "../HomePage";
 import "../global.css";
 ---
 <!doctype html>
@@ -11,6 +11,6 @@ import "../global.css";
     <title>Woods CS</title>
 </head>
 <body class="bg-neutral-950 font-mono font-light">
-    <Home client:load />
+    <HomePage client:load />
 </body>
 </html>
