Improve some seo-related stuff

--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -8,6 +8,7 @@ import GameJamPage from "../GameJamPage";
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Woodlands CS 2025 game jam, from September 16 to October 13.">
     <title>Game Jam 2025</title>
 </head>
 <body class="bg-neutral-950 font-mono font-light">
