--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -9,7 +9,7 @@ import GameJamPage from "../GameJamPage";
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Woodlands CS 2025 game jam, from September 16 to October 13.">
-    <title>Game Jam 2025</title>
+    <title>Game Jam 2025 | Woodlands Computer Science</title>
 </head>
 <body class="bg-neutral-950 font-mono font-light">
     <GameJamPage client:load />
