--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import "../global.css";
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Welcome to the Woodlands CS community! Meetings weekly on Mondays.">
-    <title>Woods CS</title>
+    <title>Woodlands Computer Science</title>
 </head>
 <body class="bg-neutral-950 font-mono font-light">
     <HomePage client:load />
