--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,16 +1,8 @@
 ---
 import PageNotFound from "../PageNotFound";
 import "../global.css";
+import Base from "../layouts/Base.astro";
 ---
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Page Not Found</title>
-</head>
-<body class="bg-neutral-950 font-mono font-light">
+<Base title="404 | Woodlands CS">
     <PageNotFound />
-</body>
-</html>
+</Base>
