--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,7 @@
 ---
 import HomePage from "../HomePage";
-import "../global.css";
+import Base from "../layouts/Base.astro";
 ---
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Welcome to the Woodlands CS community! Meetings weekly on Mondays.">
-    <title>Woodlands Computer Science</title>
-</head>
-<body class="bg-neutral-950 font-mono font-light">
+<Base title="Woodlands Computer Science" description="Welcome to the Woodlands CS community! Meetings weekly on Mondays.">
     <HomePage client:load />
-</body>
-</html>
+</Base>
