--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -15,7 +15,7 @@ const {title, description } = Astro.props;
     <meta name="description" content={description} />
     <title>{title}</title>
 </head>
-<body class="bg-neutral-950 font-mono font-light">
+<body class="bg-neutral-950 font-mono font-light h-screen">
 <slot />
 </body>
 </html>
