--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -16,10 +16,11 @@ const posts = (await getCollection('posts')).sort(
             <Pane className="font-sans font-normal">
                 <h1>Meeting Notes</h1>
                 <p class="mb-8">Welcome to the blog! Club updates, meeting notes, and resources will be posted here.</p>
-                <ul class="list-none p-0">
-                    {posts.map((post, index) => <li>
+                <h2>Latest Posts</h2>
+                <ul class="list-none p-0 m-0">
+                    {posts.map((post, index) => <li class="ps-0">
                         {index > 0 && <hr class="my-8" />}
-                        <h2><a href={"/posts/" + post.id} class="no-underline">{post.data.title}</a></h2>
+                        <h3><a href={"/posts/" + post.id} class="no-underline">{post.data.title}</a></h3>
                         <time datetime={formatISO(post.data.date)} class="text-foreground-dimmed">
                             {formatDate(post.data.date, "d MMMM yyyy")}
                         </time>
