--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -47,7 +47,7 @@ const toc = buildTOC(headings);
                     <hr />
 
                     {frontmatter.slides &&
-                            <span class="text-yellow-300 my-8 italic">Warning: this content may require a PDSB account.</span>
+                            <span class="text-yellow-300 my-8 italic">This content may require a PDSB account.</span>
                     }
                     {!frontmatter.slides &&
                         <nav class="mt-4 mb-8  ml-4 rounded-2xl p-4 border-1 toc border-neutral-700 max-w-sm">
