--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -2,10 +2,10 @@
 import Pane from "../components/Pane";
 import Base from "./Base.astro";
 import Footer from "../components/Footer";
-import Template from "../components/Template";
 import {formatDate, isValid} from "date-fns";
 import TableOfContents, { type Heading } from "../components/TableOfContents";
 import {FaAngleLeft} from "react-icons/fa6";
+import Nav from "../components/Nav";
 const { frontmatter, headings } = Astro.props;
 const date = new Date(frontmatter.date);
 
@@ -33,9 +33,10 @@ function buildTOC(rawHeadings: RawHeading[]): Heading[] {
 const toc = buildTOC(headings);
 ---
 <Base title={frontmatter.title} description={frontmatter.description} >
-    <Template active="/posts" client:load>
+    <Nav client:load active="/posts" />
+    <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
         <div class={"max-w-full mx-auto flex flex-col gap-4 blog-post " + (frontmatter.slides ? "w-full" : "w-3xl")}>
-            <Pane className="font-sans font-normal">
+            <Pane overflow className="font-sans font-normal">
                 <a href="/posts/" class="btn p-0 icon-text mb-4"><FaAngleLeft/> Back</a>
                 <article>
                     <h1>{frontmatter.title}</h1>
@@ -60,8 +61,7 @@ const toc = buildTOC(headings);
                     <slot />
                 </article>
             </Pane>
-
             <Footer />
         </div>
-    </Template>
+    </main>
 </Base>
