--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,83 @@
 ---
-import HomePage from "../HomePage";
+import { Image } from 'astro:assets';
 import Base from "../layouts/Base.astro";
+import HomeNav from "../components/HomeNav";
+import Pane from "../components/Pane";
+import {FaAngleRight} from "react-icons/fa6";
+import Meetings from "../components/Meetings";
+import Footer from "../components/Footer";
+
+import hackPeelImage from '../assets/HackPeelLogo.png';
+import gameJamImage from '../assets/GameJam.png';
 ---
 <Base title="Woodlands Computer Science" description="Welcome to the Woodlands CS community! Meetings weekly on Mondays.">
-    <HomePage client:load />
+    <HomeNav client:load />
+    <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
+        <Pane>
+            <h1 class="text-3xl font-bold mb-4" id="home">Woods CS is back for 2025</h1>
+            <div class="flex flex-col gap-4 items-start max-w-3xl">
+                <p>
+                    Welcome to the Woodlands computer science community!
+                </p>
+                <p>
+                    Join us <strong class="text-neutral-200 underline"> Monday lunches in Room 100</strong> for:
+                </p>
+                <ul>
+                    <li>Lessons and workshops</li>
+                    <li>Contest programming (CCC)</li>
+                    <li>Game dev</li>
+                    <li>Cybersecurity</li>
+                    <li>ML/AI</li>
+                    <li>Web dev</li>
+                    <li>Open studio</li>
+                </ul>
+                <p>Beginning programmers or those interested in CS are encouraged to attend!</p>
+                <div class="flex gap-4 items-start mt-4 max-w-full flex-wrap">
+                    <a href="#calendar" class="btn bg-brand text-white font-bold">See What's Happening <FaAngleRight /></a>
+                </div>
+            </div>
+            <hr class="my-8"/>
+            <div class="flex flex-col-reverse xl:flex-row items-start">
+                <div>
+                    <div class="flex flex-col gap-4 max-w-3xl items-start">
+                        <h2 class="text-3xl font-bold" id="game-jam">Game Jam 2025</h2>
+                        <p>This month, we're once again hosting our annual Game Jam! The theme this year is <strong>Comes in Pairs</strong>.</p>
+                        <p>Are you passionate about art, modeling, music, or coding? Have you always wanted to make a game of your very own?
+                            Come join us in Room 100, where we'll teach you how to use the <strong>Godot Game Engine</strong>
+                            &mdash;&mdash;no technical or gamedev experience necessary.</p>
+                        <p class="text-foreground-dimmed text-sm"><i>Submissions are due on October 13.</i></p>
+                        <a href="/game-jam" class="btn border-2">Details <FaAngleRight /></a>
+                    </div>
+                    <hr  class="my-8"/>
+                    <div class="flex flex-col gap-4">
+                        <h2 class="text-3xl font-bold" id="calendar">Calendar</h2>
+                        <Meetings client:load showMeetingInfo />
+                    </div>
+                </div>
+                <Image priority alt="Game jam poster" src={gameJamImage} class="xl:sticky xl:top-8 w-2xl md:max-w-3/7 mb-8 xl:my-0 xl:mx-8" />
+            </div>
+            <hr class="my-8"/>
+            <h2 class="text-3xl font-bold mb-4">Meeting Notes</h2>
+            <div class="flex flex-col gap-4 items-start">
+                <p>Past meeting notes and lesson material can be found on our website.</p>
+                <a href="/posts" class="btn border-2">Meeting Notes <FaAngleRight /></a>
+            </div>
+            <hr class="my-8"/>
+            <h2 class="text-3xl font-bold mb-4">hack::peel</h2>
+            <div class="flex flex-col-reverse xl:flex-row items-start justify-between">
+                <article class="flex flex-col gap-4 items-start max-w-3xl">
+                    <p>
+                        hack::peel is the Woodlands' annual Peel-wide hackathon.
+                        Join over 100 students from across the Peel region and turn a special idea into your very own hack!
+                    </p>
+                    <p>
+                        Students enrolled in a Peel region high-school (including DPCSB) are eligible to participate in hack::peel.
+                    </p>
+                    <p class="text-foreground-dimmed text-sm"><i>More details coming soon, stay tuned!</i></p>
+                </article>
+                <Image alt="hack::peel logo" src={hackPeelImage} class="hidden lg:block w-lg md:max-w-3/4 my-8 xl:my-0 xl:mx-8" />
+            </div>
+        </Pane>
+        <Footer />
+    </main>
 </Base>
