remove ambiguous style

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -16,7 +16,7 @@ const {title, description} = Astro.props;
     <title>{title}</title>
 </head>
 <body class="bg-neutral-950 font-mono font-light">
-<div class="px-4 lg:py-4 flex h-full mx-auto justify-center items-start flex-col lg:flex-row lg:gap-8 h-auto">
+<div class="px-4 lg:py-4 flex mx-auto justify-center items-start flex-col lg:flex-row lg:gap-8 h-auto">
     <slot />
 </div>
 </body>
