Fix meeting schedule

--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -44,7 +44,7 @@ import {Image} from "astro:assets";
                     </div>
                     <hr class="my-8" />
                     <h2 class="text-3xl font-bold mb-4">Schedule</h2>
-                    <Meetings />
+                    <Meetings client:load />
                     <hr class="my-8" />
                     <h2 class="text-3xl font-bold mb-4">FAQ</h2>
                     <details name="faq">
