Place footers back

--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -9,6 +9,7 @@ import Pane from "../components/Pane";
 import {GameJamActions, GameJamCountdown} from "../components/GameJam";
 import gameJamPoster from "../assets/GameJam.png";
 import {Image} from "astro:assets";
+import Footer from "../components/Footer";
 ---
 
 <Base title="Game Jam 2025 | Woodlands Computer Science" description="Woodlands CS 2025 game jam, from September 16 to October 13.">
@@ -68,5 +69,6 @@ import {Image} from "astro:assets";
                 </div>
             </div>
         </Pane>
+        <Footer />
     </main>
 </Base>
