--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -10,7 +10,7 @@ const posts = (await getCollection('posts')).sort(
 );
 
 ---
-<Base title={"Meeting Notes"} description="Woodlands CS Blog and meeting note repository." >
+<Base title="Meeting Notes | Woodlands Computer Science" description="Woodlands CS Blog and meeting note repository." >
     <Nav client:load active="/posts" />
     <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
         <div class="max-w-3xl w-full mx-auto flex flex-col gap-4 blog-post">
