--- a/src/global.css
+++ b/src/global.css
@@ -88,19 +88,19 @@
             @apply ml-8 p-2;
         }
         h1 {
-            @apply text-4xl mb-4;
+            @apply text-3xl mb-4;
             font-weight: 800;
         }
         h2 {
-            @apply text-2xl mb-2 mt-4;
+            @apply text-3xl mb-2 mt-4;
             font-weight: 700;
         }
         h3 {
-            @apply text-xl mb-2 mt-4;
+            @apply text-2xl mb-2 mt-4;
             font-weight: 500;
         }
         h4, h5, h6 {
-            @apply text-lg my-2;
+            @apply text-xl my-2;
             font-weight: 600;
         }
         p {
