--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -25,7 +25,7 @@ const posts = (await getCollection('posts')).sort(
                         <time datetime={formatISO(post.data.date)} class="text-foreground-dimmed">
                             {formatDate(post.data.date, "d MMMM yyyy")}
                         </time>
-                        <p class="font-sans font-normal">{post.data.description}</p>
+                        <p>{post.data.description}</p>
                     </li>)}
                 </ul>
             </Pane>
