--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ Join us weekly for lessons, workshops, and contests.
     <HomeNav client:load />
     <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
         <Pane>
-            <h1 class="text-3xl font-bold mb-4" id="home">Woods CS is back for 2025</h1>
+            <h1 class="text-4xl font-bold mb-4" id="home">Woodlands CS is back for 2025</h1>
             <div class="flex flex-col gap-4 items-start max-w-3xl">
                 <p>
                     Welcome to the Woodlands computer science community!
@@ -46,7 +46,7 @@ Join us weekly for lessons, workshops, and contests.
                 <div>
                     <div class="flex flex-col gap-4 max-w-3xl items-start">
                         <h2 class="text-3xl font-bold" id="game-jam">Game Jam 2025</h2>
-                        <p>This month, we're once again hosting our annual Game Jam! The theme this year is <strong>Comes in Pairs</strong>.</p>
+                        <p>This month, we're once again hosting our annual game jam! The theme this year is <strong>Comes in Pairs</strong>.</p>
                         <p>Are you passionate about art, modeling, music, or coding? Have you always wanted to make a game of your very own?
                             Come join us in Room 100, where we'll teach you how to use the <strong>Godot Game Engine</strong>
                             &mdash;&mdash;no technical or gamedev experience necessary.</p>
