--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,8 @@
     html {
         scroll-behavior: smooth;
         color: var(--color-foreground);
+        font-family: var(--font-mono);
+        font-weight: var(--font-weight-light);
     }
     a {
         text-decoration: underline;
