--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -15,7 +15,7 @@ const posts = (await getCollection('posts')).sort(
     <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
         <div class="max-w-3xl w-full mx-auto flex flex-col gap-4 blog-post">
             <Pane overflowScroll>
-                <h1>Meeting Notes</h1>
+                <h1 class="text-4xl">Meeting Notes</h1>
                 <p class="mb-8">Club updates, meeting notes, and resources will be posted here.</p>
                 <h2>Latest Posts</h2>
                 <ul class="list-none p-0 m-0">
