--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ Join us weekly for lessons, workshops, and contests.
                     <hr  class="my-8"/>
                     <div class="flex flex-col gap-4">
                         <h2 class="text-3xl font-bold" id="calendar">Calendar</h2>
-                        <Meetings client:load showMeetingInfo />
+                        <Meetings client:load showNextMeeting />
                     </div>
                 </div>
                 <Image priority alt="Game jam poster" src={gameJamImage} class="xl:sticky xl:top-8 w-2xl md:max-w-3/7 mb-8 xl:my-0 xl:mx-8" />
