--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ Join us weekly for lessons, workshops, and contests.
             <div class="flex flex-col gap-4 items-start">
                 <NewsBar client:load className="my-4">
                     {posts.map(p => <NewsItem href={"/posts/" + p.id}>
-                        <h2 class="text-lg font-bold">{p.data.title}</h2>
+                        <h3 class="text-lg text-foreground-bright font-bold">{p.data.title}</h2>
                         <Time dateTime={p.data.date} format='dd MMMM yyyy'/>
                         <p class="mt-4 text-pretty overflow-ellipsis max-h-full line-clamp-5">{p.data.description}</p>
                     </NewsItem>)}
