--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -37,7 +37,7 @@ const toc = buildTOC(headings);
     <InterceptExternalLinks client:load />
     <Nav client:load active="/posts" />
     <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
-        <div class={"max-w-full mx-auto flex flex-col gap-4 blog-post " + (frontmatter.slides ? "w-full" : "w-3xl")}>
+        <div class={"mx-auto flex flex-col gap-4 blog-post " + (frontmatter.slides ? "w-full" : "w-3xl")}>
             <Pane overflowScroll={!frontmatter.slides} >
                 <a href="/posts/" class="btn p-0 icon-text mb-4"><FaAngleLeft/> Back</a>
                 <article>
