--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -17,10 +17,10 @@ const posts = (await getCollection('posts')).sort(
             <Pane overflowScroll>
                 <h1 class="text-4xl">Meeting Notes</h1>
                 <p class="mb-8">Club updates, meeting notes, and resources will be posted here.</p>
+                <hr class="my-8" />
                 <h2>Latest Posts</h2>
                 <ul class="list-none p-0 m-0">
-                    {posts.map((post, index) => <li class="ps-0">
-                        {index > 0 && <hr class="my-8" />}
+                    {posts.map((post, index) => <li class="ps-0 mb-16">
                         <h3><a href={"/posts/" + post.id}>{post.data.title}</a></h3>
                         <time datetime={formatISO(post.data.date)} class="text-foreground-dimmed">
                             {formatDate(post.data.date, "d MMMM yyyy")}
