--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,8 +52,8 @@ Join us weekly for lessons, workshops, and contests.
             <div class="flex flex-col gap-4 items-start">
                 <NewsBar client:load className="my-4">
                     {posts.map(p => <NewsItem href={"/posts/" + p.id}>
-                        <h3 class="text-lg text-foreground-bright font-bold">{p.data.title}</h2>
-                        <Time dateTime={p.data.date} format='dd MMMM yyyy'/>
+                        <h3 class="text-lg text-foreground-bright font-bold line-clamp-2">{p.data.title}</h2>
+                        <Time dateTime={p.data.date} format='dd MMMM yyyy' className="text-ellipsis" />
                         <p class="mt-4 text-pretty overflow-ellipsis max-h-full line-clamp-6">{p.data.description}</p>
                     </NewsItem>)}
                 </NewsBar>
